--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,20 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
-            "request": "launch",
-            "name": "Run Node",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\src\\main.ts",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/out/**/*.js"
-            ]
-        },
-        {
-            "name": ".NET Script Debug",
+            "name": "Debug .NET Script",
             "type": "coreclr",
             "request": "launch",
             "program": "dotnet",
